RealSurf/Parser.output
Terminale, die in Grammatik unbenutzt sind

   "invalid char"
   YY_MISSING_END_OF_COMMENT


Grammatik

    0 $accept: program $end

    1 program: polynomial
    2        | parameter

    3 constant: "float"
    4         | "integer"

    5 parameter: constant
    6          | "identifier"
    7          | parameter '+' parameter
    8          | parameter '-' parameter
    9          | parameter '*' parameter
   10          | parameter '/' parameter
   11          | '-' parameter
   12          | parameter '^' "integer"
   13          | '(' parameter ')'
   14          | YY_SIN '(' parameter ')'
   15          | YY_COS '(' parameter ')'
   16          | YY_TAN '(' parameter ')'
   17          | YY_ASIN '(' parameter ')'
   18          | YY_ACOS '(' parameter ')'
   19          | YY_ATAN '(' parameter ')'
   20          | YY_ATAN2 '(' parameter ',' parameter ')'
   21          | YY_EXP '(' parameter ')'
   22          | YY_LOG '(' parameter ')'
   23          | YY_SQRT '(' parameter ')'
   24          | YY_POW '(' parameter ',' parameter ')'
   25          | YY_CEIL '(' parameter ')'
   26          | YY_FLOOR '(' parameter ')'
   27          | YY_ABS '(' parameter ')'
   28          | YY_SIGN '(' parameter ')'

   29 polynomial: "x"
   30           | "y"
   31           | "z"
   32           | parameter '+' polynomial
   33           | polynomial '+' polynomial
   34           | polynomial '+' parameter
   35           | parameter '-' polynomial
   36           | polynomial '-' parameter
   37           | polynomial '-' polynomial
   38           | parameter '*' polynomial
   39           | polynomial '*' parameter
   40           | polynomial '*' polynomial
   41           | polynomial '/' parameter
   42           | '-' polynomial
   43           | polynomial '^' "integer"
   44           | '(' polynomial ')'


Terminale und die Regeln, in denen sie verwendet werden

$end (0) 0
'(' (40) 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 44
')' (41) 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 44
'*' (42) 9 38 39 40
'+' (43) 7 32 33 34
',' (44) 20 24
'-' (45) 8 11 35 36 37 42
'/' (47) 10 41
'^' (94) 12 43
error (256)
"integer" (258) 4 12 43
"float" (259) 3
"x" (260) 29
"y" (261) 30
"z" (262) 31
YY_NEG (263)
"identifier" (264) 6
"invalid char" (265)
YY_MISSING_END_OF_COMMENT (266)
YY_SIN (267) 14
YY_COS (268) 15
YY_TAN (269) 16
YY_ASIN (270) 17
YY_ACOS (271) 18
YY_ATAN (272) 19
YY_ATAN2 (273) 20
YY_EXP (274) 21
YY_LOG (275) 22
YY_SQRT (276) 23
YY_POW (277) 24
YY_CEIL (278) 25
YY_FLOOR (279) 26
YY_ABS (280) 27
YY_SIGN (281) 28


Nicht-Terminal und die Regeln, in denen sie verwendet werden

$accept (35)
    auf der linken Seite: 0
program (36)
    auf der linken Seite: 1 2, auf der rechten Seite: 0
constant (37)
    auf der linken Seite: 3 4, auf der rechten Seite: 5
parameter (38)
    auf der linken Seite: 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20
    21 22 23 24 25 26 27 28, auf der rechten Seite: 2 7 8 9 10 11 12
    13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 32 34 35 36 38
    39 41
polynomial (39)
    auf der linken Seite: 29 30 31 32 33 34 35 36 37 38 39 40 41 42
    43 44, auf der rechten Seite: 1 32 33 34 35 36 37 38 39 40 41 42
    43 44


Zustand 0

    0 $accept: . program $end

    "integer"     schiebe und gehe zu Zustand 1 über
    "float"       schiebe und gehe zu Zustand 2 über
    "x"           schiebe und gehe zu Zustand 3 über
    "y"           schiebe und gehe zu Zustand 4 über
    "z"           schiebe und gehe zu Zustand 5 über
    '-'           schiebe und gehe zu Zustand 6 über
    "identifier"  schiebe und gehe zu Zustand 7 über
    YY_SIN        schiebe und gehe zu Zustand 8 über
    YY_COS        schiebe und gehe zu Zustand 9 über
    YY_TAN        schiebe und gehe zu Zustand 10 über
    YY_ASIN       schiebe und gehe zu Zustand 11 über
    YY_ACOS       schiebe und gehe zu Zustand 12 über
    YY_ATAN       schiebe und gehe zu Zustand 13 über
    YY_ATAN2      schiebe und gehe zu Zustand 14 über
    YY_EXP        schiebe und gehe zu Zustand 15 über
    YY_LOG        schiebe und gehe zu Zustand 16 über
    YY_SQRT       schiebe und gehe zu Zustand 17 über
    YY_POW        schiebe und gehe zu Zustand 18 über
    YY_CEIL       schiebe und gehe zu Zustand 19 über
    YY_FLOOR      schiebe und gehe zu Zustand 20 über
    YY_ABS        schiebe und gehe zu Zustand 21 über
    YY_SIGN       schiebe und gehe zu Zustand 22 über
    '('           schiebe und gehe zu Zustand 23 über

    program     gehe zu Zustand 24 über
    constant    gehe zu Zustand 25 über
    parameter   gehe zu Zustand 26 über
    polynomial  gehe zu Zustand 27 über


Zustand 1

    4 constant: "integer" .

    $default  reduziere mit Regel 4 (constant)


Zustand 2

    3 constant: "float" .

    $default  reduziere mit Regel 3 (constant)


Zustand 3

   29 polynomial: "x" .

    $default  reduziere mit Regel 29 (polynomial)


Zustand 4

   30 polynomial: "y" .

    $default  reduziere mit Regel 30 (polynomial)


Zustand 5

   31 polynomial: "z" .

    $default  reduziere mit Regel 31 (polynomial)


Zustand 6

   11 parameter: '-' . parameter
   42 polynomial: '-' . polynomial

    "integer"     schiebe und gehe zu Zustand 1 über
    "float"       schiebe und gehe zu Zustand 2 über
    "x"           schiebe und gehe zu Zustand 3 über
    "y"           schiebe und gehe zu Zustand 4 über
    "z"           schiebe und gehe zu Zustand 5 über
    '-'           schiebe und gehe zu Zustand 6 über
    "identifier"  schiebe und gehe zu Zustand 7 über
    YY_SIN        schiebe und gehe zu Zustand 8 über
    YY_COS        schiebe und gehe zu Zustand 9 über
    YY_TAN        schiebe und gehe zu Zustand 10 über
    YY_ASIN       schiebe und gehe zu Zustand 11 über
    YY_ACOS       schiebe und gehe zu Zustand 12 über
    YY_ATAN       schiebe und gehe zu Zustand 13 über
    YY_ATAN2      schiebe und gehe zu Zustand 14 über
    YY_EXP        schiebe und gehe zu Zustand 15 über
    YY_LOG        schiebe und gehe zu Zustand 16 über
    YY_SQRT       schiebe und gehe zu Zustand 17 über
    YY_POW        schiebe und gehe zu Zustand 18 über
    YY_CEIL       schiebe und gehe zu Zustand 19 über
    YY_FLOOR      schiebe und gehe zu Zustand 20 über
    YY_ABS        schiebe und gehe zu Zustand 21 über
    YY_SIGN       schiebe und gehe zu Zustand 22 über
    '('           schiebe und gehe zu Zustand 23 über

    constant    gehe zu Zustand 25 über
    parameter   gehe zu Zustand 28 über
    polynomial  gehe zu Zustand 29 über


Zustand 7

    6 parameter: "identifier" .

    $default  reduziere mit Regel 6 (parameter)


Zustand 8

   14 parameter: YY_SIN . '(' parameter ')'

    '('  schiebe und gehe zu Zustand 30 über


Zustand 9

   15 parameter: YY_COS . '(' parameter ')'

    '('  schiebe und gehe zu Zustand 31 über


Zustand 10

   16 parameter: YY_TAN . '(' parameter ')'

    '('  schiebe und gehe zu Zustand 32 über


Zustand 11

   17 parameter: YY_ASIN . '(' parameter ')'

    '('  schiebe und gehe zu Zustand 33 über


Zustand 12

   18 parameter: YY_ACOS . '(' parameter ')'

    '('  schiebe und gehe zu Zustand 34 über


Zustand 13

   19 parameter: YY_ATAN . '(' parameter ')'

    '('  schiebe und gehe zu Zustand 35 über


Zustand 14

   20 parameter: YY_ATAN2 . '(' parameter ',' parameter ')'

    '('  schiebe und gehe zu Zustand 36 über


Zustand 15

   21 parameter: YY_EXP . '(' parameter ')'

    '('  schiebe und gehe zu Zustand 37 über


Zustand 16

   22 parameter: YY_LOG . '(' parameter ')'

    '('  schiebe und gehe zu Zustand 38 über


Zustand 17

   23 parameter: YY_SQRT . '(' parameter ')'

    '('  schiebe und gehe zu Zustand 39 über


Zustand 18

   24 parameter: YY_POW . '(' parameter ',' parameter ')'

    '('  schiebe und gehe zu Zustand 40 über


Zustand 19

   25 parameter: YY_CEIL . '(' parameter ')'

    '('  schiebe und gehe zu Zustand 41 über


Zustand 20

   26 parameter: YY_FLOOR . '(' parameter ')'

    '('  schiebe und gehe zu Zustand 42 über


Zustand 21

   27 parameter: YY_ABS . '(' parameter ')'

    '('  schiebe und gehe zu Zustand 43 über


Zustand 22

   28 parameter: YY_SIGN . '(' parameter ')'

    '('  schiebe und gehe zu Zustand 44 über


Zustand 23

   13 parameter: '(' . parameter ')'
   44 polynomial: '(' . polynomial ')'

    "integer"     schiebe und gehe zu Zustand 1 über
    "float"       schiebe und gehe zu Zustand 2 über
    "x"           schiebe und gehe zu Zustand 3 über
    "y"           schiebe und gehe zu Zustand 4 über
    "z"           schiebe und gehe zu Zustand 5 über
    '-'           schiebe und gehe zu Zustand 6 über
    "identifier"  schiebe und gehe zu Zustand 7 über
    YY_SIN        schiebe und gehe zu Zustand 8 über
    YY_COS        schiebe und gehe zu Zustand 9 über
    YY_TAN        schiebe und gehe zu Zustand 10 über
    YY_ASIN       schiebe und gehe zu Zustand 11 über
    YY_ACOS       schiebe und gehe zu Zustand 12 über
    YY_ATAN       schiebe und gehe zu Zustand 13 über
    YY_ATAN2      schiebe und gehe zu Zustand 14 über
    YY_EXP        schiebe und gehe zu Zustand 15 über
    YY_LOG        schiebe und gehe zu Zustand 16 über
    YY_SQRT       schiebe und gehe zu Zustand 17 über
    YY_POW        schiebe und gehe zu Zustand 18 über
    YY_CEIL       schiebe und gehe zu Zustand 19 über
    YY_FLOOR      schiebe und gehe zu Zustand 20 über
    YY_ABS        schiebe und gehe zu Zustand 21 über
    YY_SIGN       schiebe und gehe zu Zustand 22 über
    '('           schiebe und gehe zu Zustand 23 über

    constant    gehe zu Zustand 25 über
    parameter   gehe zu Zustand 45 über
    polynomial  gehe zu Zustand 46 über


Zustand 24

    0 $accept: program . $end

    $end  schiebe und gehe zu Zustand 47 über


Zustand 25

    5 parameter: constant .

    $default  reduziere mit Regel 5 (parameter)


Zustand 26

    2 program: parameter .
    7 parameter: parameter . '+' parameter
    8          | parameter . '-' parameter
    9          | parameter . '*' parameter
   10          | parameter . '/' parameter
   12          | parameter . '^' "integer"
   32 polynomial: parameter . '+' polynomial
   35           | parameter . '-' polynomial
   38           | parameter . '*' polynomial

    '-'  schiebe und gehe zu Zustand 48 über
    '+'  schiebe und gehe zu Zustand 49 über
    '*'  schiebe und gehe zu Zustand 50 über
    '/'  schiebe und gehe zu Zustand 51 über
    '^'  schiebe und gehe zu Zustand 52 über

    $default  reduziere mit Regel 2 (program)


Zustand 27

    1 program: polynomial .
   33 polynomial: polynomial . '+' polynomial
   34           | polynomial . '+' parameter
   36           | polynomial . '-' parameter
   37           | polynomial . '-' polynomial
   39           | polynomial . '*' parameter
   40           | polynomial . '*' polynomial
   41           | polynomial . '/' parameter
   43           | polynomial . '^' "integer"

    '-'  schiebe und gehe zu Zustand 53 über
    '+'  schiebe und gehe zu Zustand 54 über
    '*'  schiebe und gehe zu Zustand 55 über
    '/'  schiebe und gehe zu Zustand 56 über
    '^'  schiebe und gehe zu Zustand 57 über

    $default  reduziere mit Regel 1 (program)


Zustand 28

    7 parameter: parameter . '+' parameter
    8          | parameter . '-' parameter
    9          | parameter . '*' parameter
   10          | parameter . '/' parameter
   11          | '-' parameter .
   12          | parameter . '^' "integer"
   32 polynomial: parameter . '+' polynomial
   35           | parameter . '-' polynomial
   38           | parameter . '*' polynomial

    '^'  schiebe und gehe zu Zustand 52 über

    $default  reduziere mit Regel 11 (parameter)


Zustand 29

   33 polynomial: polynomial . '+' polynomial
   34           | polynomial . '+' parameter
   36           | polynomial . '-' parameter
   37           | polynomial . '-' polynomial
   39           | polynomial . '*' parameter
   40           | polynomial . '*' polynomial
   41           | polynomial . '/' parameter
   42           | '-' polynomial .
   43           | polynomial . '^' "integer"

    '^'  schiebe und gehe zu Zustand 57 über

    $default  reduziere mit Regel 42 (polynomial)


Zustand 30

   14 parameter: YY_SIN '(' . parameter ')'

    "integer"     schiebe und gehe zu Zustand 1 über
    "float"       schiebe und gehe zu Zustand 2 über
    '-'           schiebe und gehe zu Zustand 58 über
    "identifier"  schiebe und gehe zu Zustand 7 über
    YY_SIN        schiebe und gehe zu Zustand 8 über
    YY_COS        schiebe und gehe zu Zustand 9 über
    YY_TAN        schiebe und gehe zu Zustand 10 über
    YY_ASIN       schiebe und gehe zu Zustand 11 über
    YY_ACOS       schiebe und gehe zu Zustand 12 über
    YY_ATAN       schiebe und gehe zu Zustand 13 über
    YY_ATAN2      schiebe und gehe zu Zustand 14 über
    YY_EXP        schiebe und gehe zu Zustand 15 über
    YY_LOG        schiebe und gehe zu Zustand 16 über
    YY_SQRT       schiebe und gehe zu Zustand 17 über
    YY_POW        schiebe und gehe zu Zustand 18 über
    YY_CEIL       schiebe und gehe zu Zustand 19 über
    YY_FLOOR      schiebe und gehe zu Zustand 20 über
    YY_ABS        schiebe und gehe zu Zustand 21 über
    YY_SIGN       schiebe und gehe zu Zustand 22 über
    '('           schiebe und gehe zu Zustand 59 über

    constant   gehe zu Zustand 25 über
    parameter  gehe zu Zustand 60 über


Zustand 31

   15 parameter: YY_COS '(' . parameter ')'

    "integer"     schiebe und gehe zu Zustand 1 über
    "float"       schiebe und gehe zu Zustand 2 über
    '-'           schiebe und gehe zu Zustand 58 über
    "identifier"  schiebe und gehe zu Zustand 7 über
    YY_SIN        schiebe und gehe zu Zustand 8 über
    YY_COS        schiebe und gehe zu Zustand 9 über
    YY_TAN        schiebe und gehe zu Zustand 10 über
    YY_ASIN       schiebe und gehe zu Zustand 11 über
    YY_ACOS       schiebe und gehe zu Zustand 12 über
    YY_ATAN       schiebe und gehe zu Zustand 13 über
    YY_ATAN2      schiebe und gehe zu Zustand 14 über
    YY_EXP        schiebe und gehe zu Zustand 15 über
    YY_LOG        schiebe und gehe zu Zustand 16 über
    YY_SQRT       schiebe und gehe zu Zustand 17 über
    YY_POW        schiebe und gehe zu Zustand 18 über
    YY_CEIL       schiebe und gehe zu Zustand 19 über
    YY_FLOOR      schiebe und gehe zu Zustand 20 über
    YY_ABS        schiebe und gehe zu Zustand 21 über
    YY_SIGN       schiebe und gehe zu Zustand 22 über
    '('           schiebe und gehe zu Zustand 59 über

    constant   gehe zu Zustand 25 über
    parameter  gehe zu Zustand 61 über


Zustand 32

   16 parameter: YY_TAN '(' . parameter ')'

    "integer"     schiebe und gehe zu Zustand 1 über
    "float"       schiebe und gehe zu Zustand 2 über
    '-'           schiebe und gehe zu Zustand 58 über
    "identifier"  schiebe und gehe zu Zustand 7 über
    YY_SIN        schiebe und gehe zu Zustand 8 über
    YY_COS        schiebe und gehe zu Zustand 9 über
    YY_TAN        schiebe und gehe zu Zustand 10 über
    YY_ASIN       schiebe und gehe zu Zustand 11 über
    YY_ACOS       schiebe und gehe zu Zustand 12 über
    YY_ATAN       schiebe und gehe zu Zustand 13 über
    YY_ATAN2      schiebe und gehe zu Zustand 14 über
    YY_EXP        schiebe und gehe zu Zustand 15 über
    YY_LOG        schiebe und gehe zu Zustand 16 über
    YY_SQRT       schiebe und gehe zu Zustand 17 über
    YY_POW        schiebe und gehe zu Zustand 18 über
    YY_CEIL       schiebe und gehe zu Zustand 19 über
    YY_FLOOR      schiebe und gehe zu Zustand 20 über
    YY_ABS        schiebe und gehe zu Zustand 21 über
    YY_SIGN       schiebe und gehe zu Zustand 22 über
    '('           schiebe und gehe zu Zustand 59 über

    constant   gehe zu Zustand 25 über
    parameter  gehe zu Zustand 62 über


Zustand 33

   17 parameter: YY_ASIN '(' . parameter ')'

    "integer"     schiebe und gehe zu Zustand 1 über
    "float"       schiebe und gehe zu Zustand 2 über
    '-'           schiebe und gehe zu Zustand 58 über
    "identifier"  schiebe und gehe zu Zustand 7 über
    YY_SIN        schiebe und gehe zu Zustand 8 über
    YY_COS        schiebe und gehe zu Zustand 9 über
    YY_TAN        schiebe und gehe zu Zustand 10 über
    YY_ASIN       schiebe und gehe zu Zustand 11 über
    YY_ACOS       schiebe und gehe zu Zustand 12 über
    YY_ATAN       schiebe und gehe zu Zustand 13 über
    YY_ATAN2      schiebe und gehe zu Zustand 14 über
    YY_EXP        schiebe und gehe zu Zustand 15 über
    YY_LOG        schiebe und gehe zu Zustand 16 über
    YY_SQRT       schiebe und gehe zu Zustand 17 über
    YY_POW        schiebe und gehe zu Zustand 18 über
    YY_CEIL       schiebe und gehe zu Zustand 19 über
    YY_FLOOR      schiebe und gehe zu Zustand 20 über
    YY_ABS        schiebe und gehe zu Zustand 21 über
    YY_SIGN       schiebe und gehe zu Zustand 22 über
    '('           schiebe und gehe zu Zustand 59 über

    constant   gehe zu Zustand 25 über
    parameter  gehe zu Zustand 63 über


Zustand 34

   18 parameter: YY_ACOS '(' . parameter ')'

    "integer"     schiebe und gehe zu Zustand 1 über
    "float"       schiebe und gehe zu Zustand 2 über
    '-'           schiebe und gehe zu Zustand 58 über
    "identifier"  schiebe und gehe zu Zustand 7 über
    YY_SIN        schiebe und gehe zu Zustand 8 über
    YY_COS        schiebe und gehe zu Zustand 9 über
    YY_TAN        schiebe und gehe zu Zustand 10 über
    YY_ASIN       schiebe und gehe zu Zustand 11 über
    YY_ACOS       schiebe und gehe zu Zustand 12 über
    YY_ATAN       schiebe und gehe zu Zustand 13 über
    YY_ATAN2      schiebe und gehe zu Zustand 14 über
    YY_EXP        schiebe und gehe zu Zustand 15 über
    YY_LOG        schiebe und gehe zu Zustand 16 über
    YY_SQRT       schiebe und gehe zu Zustand 17 über
    YY_POW        schiebe und gehe zu Zustand 18 über
    YY_CEIL       schiebe und gehe zu Zustand 19 über
    YY_FLOOR      schiebe und gehe zu Zustand 20 über
    YY_ABS        schiebe und gehe zu Zustand 21 über
    YY_SIGN       schiebe und gehe zu Zustand 22 über
    '('           schiebe und gehe zu Zustand 59 über

    constant   gehe zu Zustand 25 über
    parameter  gehe zu Zustand 64 über


Zustand 35

   19 parameter: YY_ATAN '(' . parameter ')'

    "integer"     schiebe und gehe zu Zustand 1 über
    "float"       schiebe und gehe zu Zustand 2 über
    '-'           schiebe und gehe zu Zustand 58 über
    "identifier"  schiebe und gehe zu Zustand 7 über
    YY_SIN        schiebe und gehe zu Zustand 8 über
    YY_COS        schiebe und gehe zu Zustand 9 über
    YY_TAN        schiebe und gehe zu Zustand 10 über
    YY_ASIN       schiebe und gehe zu Zustand 11 über
    YY_ACOS       schiebe und gehe zu Zustand 12 über
    YY_ATAN       schiebe und gehe zu Zustand 13 über
    YY_ATAN2      schiebe und gehe zu Zustand 14 über
    YY_EXP        schiebe und gehe zu Zustand 15 über
    YY_LOG        schiebe und gehe zu Zustand 16 über
    YY_SQRT       schiebe und gehe zu Zustand 17 über
    YY_POW        schiebe und gehe zu Zustand 18 über
    YY_CEIL       schiebe und gehe zu Zustand 19 über
    YY_FLOOR      schiebe und gehe zu Zustand 20 über
    YY_ABS        schiebe und gehe zu Zustand 21 über
    YY_SIGN       schiebe und gehe zu Zustand 22 über
    '('           schiebe und gehe zu Zustand 59 über

    constant   gehe zu Zustand 25 über
    parameter  gehe zu Zustand 65 über


Zustand 36

   20 parameter: YY_ATAN2 '(' . parameter ',' parameter ')'

    "integer"     schiebe und gehe zu Zustand 1 über
    "float"       schiebe und gehe zu Zustand 2 über
    '-'           schiebe und gehe zu Zustand 58 über
    "identifier"  schiebe und gehe zu Zustand 7 über
    YY_SIN        schiebe und gehe zu Zustand 8 über
    YY_COS        schiebe und gehe zu Zustand 9 über
    YY_TAN        schiebe und gehe zu Zustand 10 über
    YY_ASIN       schiebe und gehe zu Zustand 11 über
    YY_ACOS       schiebe und gehe zu Zustand 12 über
    YY_ATAN       schiebe und gehe zu Zustand 13 über
    YY_ATAN2      schiebe und gehe zu Zustand 14 über
    YY_EXP        schiebe und gehe zu Zustand 15 über
    YY_LOG        schiebe und gehe zu Zustand 16 über
    YY_SQRT       schiebe und gehe zu Zustand 17 über
    YY_POW        schiebe und gehe zu Zustand 18 über
    YY_CEIL       schiebe und gehe zu Zustand 19 über
    YY_FLOOR      schiebe und gehe zu Zustand 20 über
    YY_ABS        schiebe und gehe zu Zustand 21 über
    YY_SIGN       schiebe und gehe zu Zustand 22 über
    '('           schiebe und gehe zu Zustand 59 über

    constant   gehe zu Zustand 25 über
    parameter  gehe zu Zustand 66 über


Zustand 37

   21 parameter: YY_EXP '(' . parameter ')'
